<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">My Movies</string>
    <string name="content_authority">com.moviemagic.dpaul.android.app</string>
    <string name="authenticator_account_type">moviemagic.dpaul.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_movie">Movie Main</string>
    <string name="title_activity_grid_movie">GridMovieActivity</string>
    <string name="title_activity_detail_movie">Movie Details</string>
    <string name="title_activity_person_movie">Person</string>
    <string name="title_activity_collection_movie">Collection</string>
    <string name="title_activity_image_viewer">Image Viewer</string>
    <string name="title_activity_movie_magic_authenticator">Sign in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_search">Search results</string>
    <string name="title_activity_donate">Donate</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_tmdb_popular">Popular</string>
    <string name="drawer_menu_tmdb_toprated">Top Rated</string>
    <string name="drawer_menu_tmdb_nowplaying">Now playing</string>
    <string name="drawer_menu_tmdb_upcoming">Upcoming</string>
    <string name="drawer_menu_user_header">My Movie List</string>
    <string name="drawer_menu_user_favourite">Favourite</string>
    <string name="drawer_menu_user_watched">Watched</string>
    <string name="drawer_menu_user_wishlist">Wish List</string>
    <string name="drawer_menu_user_collection">Collection</string>
    <string name="drawer_menu_tmdb_header">My TMDb List</string>
    <string name="drawer_menu_tmdb_user_watchlist">Watchlists</string>
    <string name="drawer_menu_tmdb_user_favourite">Favourites</string>
    <string name="drawer_menu_tmdb_user_rated">Rated</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_contact_developer">Contact Developer</string>
    <string name="drawer_menu_developer_website">Developer\'s Website</string>
    <string name="drawer_menu_privacy_policy">Privacy Policy</string>
    <string name="drawer_menu_eula">End User License Agreement</string>
    <string name="drawer_menu_donate">Donate</string>
    <string name="drawer_menu_rate_the_app">Rate and Comment</string>
    <string name="nav_drawer_log_in">Login</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_search">Search</string>
    <string name="menu_action_sort">Sort</string>
    <string name="menu_action_filter">Filter</string>
    <string name="menu_action_share">Share</string>
    <string name="menu_action_save">Save</string>
    <string name="menu_action_filter_reset">Reset</string>
    <string name="menu_action_filter_release_year">Release Year</string>
    <string name="menu_action_filter_genre">Genre</string>
    <string name="menu_action_filter_rating">Rating</string>
    <string name="menu_action_filter_genre_action">Action</string>
    <string name="menu_action_filter_genre_adventure">Adventure</string>
    <string name="menu_action_filter_genre_animation">Animation</string>
    <string name="menu_action_filter_genre_comedy">Comedy</string>
    <string name="menu_action_filter_genre_crime">Crime</string>
    <string name="menu_action_filter_genre_documentary">Documentary</string>
    <string name="menu_action_filter_genre_drama">Drama</string>
    <string name="menu_action_filter_genre_family">Family</string>
    <string name="menu_action_filter_genre_fantasy">Fantasy</string>
    <string name="menu_action_filter_genre_history">History</string>
    <string name="menu_action_filter_genre_horror">Horror</string>
    <string name="menu_action_filter_genre_music">Music</string>
    <string name="menu_action_filter_genre_mystery">Mystery</string>
    <string name="menu_action_filter_genre_romance">Romance</string>
    <string name="menu_action_filter_genre_science_fiction">Science Fiction</string>
    <string name="menu_action_filter_genre_tv_movie">TV Movies</string>
    <string name="menu_action_filter_genre_thriller">Thriller</string>
    <string name="menu_action_filter_genre_war">War</string>
    <string name="menu_action_filter_genre_western">Western</string>
    <string name="menu_action_filter_rating_greater_than_equal_9"><![CDATA[Rating >= 9]]></string>
    <string name="menu_action_filter_rating_greater_than_equal_8"><![CDATA[Rating >= 8]]></string>
    <string name="menu_action_filter_rating_greater_than_equal_7"><![CDATA[Rating >= 7]]></string>
    <string name="menu_action_filter_rating_greater_than_equal_6"><![CDATA[Rating >= 6]]></string>
    <string name="menu_action_filter_rating_greater_than_equal_5"><![CDATA[Rating >= 5]]></string>
    <string name="menu_action_filter_rating_less_than_5"><![CDATA[Rating < 5]]></string>
    <string name="home_movie_in_cinema_title">In Cinemas</string>
    <string name="home_movie_coming_soon_title">Coming Soon</string>
    <string name="home_movie_recently_added_title">Recently Added To My List</string>
    <string name="home_movie_run_time_text">Run Time</string>
    <string name="home_movie_in_cinema_text">In Cinemas</string>
    <string name="home_movie_coming_soon_text">Coming soon</string>
    <string name="home_movie_watched_list_text">In Watched List</string>
    <string name="home_movie_wish_list_text">In Wish List</string>
    <string name="home_movie_favourite_list_text">In Favourite List</string>
    <string name="home_movie_collection_list_text">In Collection List</string>
    <string name="home_movie_recommended_list_text">Recommended</string>
    <string name="home_movie_release_date_text">Release Date</string>
    <string name="show_all_button_text">Show All</string>
    <string name="home_movie_recommendation_title">Recommend For You</string>
    <string name="movie_detail_release_date">Release Date</string>
    <string name="movie_detail_revenue">Revenue</string>
    <string name="movie_detail_budget">Budget</string>
    <string name="tmdb_rating_text">TMDb Rating</string>
    <string name="user_rating_text">My Rating</string>
    <string name="movie_detail_trailer_text">Movie Trailer</string>
    <string name="youtube_initialization_error">Youtube Initialization failed: Unable to play video</string>
    <string name="movie_detail_prod_cmpy_text">Production Company</string>
    <string name="movie_detail_production_country_text">Production Country</string>
    <string name="movie_detail_cast_header_text">Movie Cast</string>
    <string name="movie_detail_crew_header_text">Movie Crew</string>
    <string name="movie_detail_similar_movie_header_text">Similar Movies</string>
    <string name="movie_detail_review_header_text">Reviews</string>
    <string name="movie_detail_synopsis_tagline">Tag line</string>
    <string name="movie_detail_synopsis">Synopsis</string>
    <string name="movie_detail_collection_header_text">Collection</string>
    <string name="movie_detail_web_links_home_page">Home Page</string>
    <string name="movie_detail_web_links_home_page_not_available">No Home Page</string>
    <string name="detail_web_links_imdb_link">IMDb Link</string>
    <string name="movie_detail_web_links_imdb_link_not_available">No IMDb Link</string>
    <string name="tmdb_rating_vote_count_text"> (Total Vote:</string>
    <string name="tmdb_rating_vote_count_closing_brace">)</string>
    <string name="movie_detail_review_recycler_view_empty_msg">No review available</string>
    <string name="movie_detail_crew_name_background_alpha">0.7</string>
    <string name="movie_data_not_available">Not Available</string>
    <string name="collection_data_not_available">Not part of any collection</string>
    <string name="single_review_item_collapse_line_item_count">2</string>
    <string name="movie_detail_web_links_header">External Links</string>
    <string name="movie_detail_user_list_drawable_title_value">My Local Lists (Tap to Add / Remove)</string>
    <string name="movie_detail_user_tmdb_list_drawable_title_value">My TMDb Lists (Tap to Add / Remove)</string>
    <string name="person_name">Name</string>
    <string name="person_dob">Date of Birth</string>
    <string name="person_place_of_birth">Place of Birth</string>
    <string name="person_also_known_as">Also Known As</string>
    <string name="person_death_day">Death Day</string>
    <string name="person_popularity">Popularity</string>
    <string name="person_biography">Biography</string>
    <string name="person_image_grid">Images</string>
    <string name="person_cast_grid">As Actor</string>
    <string name="person_crew_grid">As Crew</string>
    <string name="person_web_links_header">External Links</string>
    <string name="person_web_links_home_page">Home Page</string>
    <string name="person_biography_collapse_line_item_count">3</string>
    <string name="collection_overview_text">Collection Overview</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This user name is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="tmdb_login_header">Login to TMDb Account</string>
    <string name="tmdb_login_body">To get more out of this application, please login with your TMDb credentials and enjoy TMDb experience. This will let you do things like rate movie, access your TMDb lists, add movies to  your TMDb lists or delete movies from your TMDb lists. If you do not have a TMDb account then click on SIGN UP and create an account.</string>
    <string name="pref_theme_key">theme_key</string>
    <string name="pref_theme_title">Application Theme</string>
    <string name="pref_theme_default_value">dynamic</string>
    <string name="pref_wifi_download_key">wifi_download_key</string>
    <string name="pref_wifi_download_title">Download Only on Wi-Fi</string>
    <string name="pref_wifi_download_default_value" translatable="false">false</string>
    <string name="pref_wifi_download_summary_on">On</string>
    <string name="pref_wifi_download_summary_off">Off</string>
    <string name="pref_notification_key">notification_key</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_default_value" translatable="false">true</string>
    <string name="pref_notification_summary_on">On</string>
    <string name="pref_notification_summary_off">Off</string>
    <string name="pref_recommendation_key">recommendation_key</string>
    <string name="pref_recommendation_title">Recommended Movie</string>
    <string name="pref_recommendation_default_value" translatable="false">true</string>
    <string name="pref_recommendation_summary_on">Recommended movies will be shown on Home screen</string>
    <string name="pref_recommendation_summary_off">Recommended movies will not be shown on Home screen</string>
    <string name="pref_reduce_data_use_key">reduce_data_use_key</string>
    <string name="pref_reduce_data_use_title">Reduce data use</string>
    <string name="pref_reduce_data_use_default_value" translatable="false">false</string>
    <string name="pref_reduce_data_use_summary_on">Images and videos will not be downloaded and Dynamic Theme will not work (not recommended)</string>
    <string name="pref_reduce_data_use_summary_off">All data including images and videos will be downloaded and Dynamic Theme will also work (recommended)</string>
    <string name="nav_drawer_imageView_content_description">App logo image</string>
</resources>