<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/nav_menu_group_public"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_drawer_home"
            android:title="@string/drawer_menu_home" />
        <item
            android:id="@+id/nav_tmdb_popular"
            android:icon="@drawable/ic_drawer_now_popular"
            android:title="@string/drawer_menu_tmdb_popular" />
        <item
            android:id="@+id/nav_tmdb_toprated"
            android:icon="@drawable/ic_drawer_star"
            android:title="@string/drawer_menu_tmdb_toprated" />

        <item
            android:id="@+id/nav_tmdb_nowplaying"
            android:icon="@drawable/ic_drawer_now_playing"
            android:title="@string/drawer_menu_tmdb_nowplaying" />

        <item
            android:id="@+id/nav_tmdb_upcoming"
            android:icon="@drawable/ic_drawer_upcoming"
            android:title="@string/drawer_menu_tmdb_upcoming" />
    </group>

    <item android:title="@string/drawer_menu_user_header">
        <menu>
            <group
                android:id="@+id/nav_menu_group_user"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_user_watched"
                    android:icon="@drawable/ic_drawer_watched"
                    android:title="@string/drawer_menu_user_watched"
                    app:actionLayout="@layout/menu_counter" /> <!-- Needed to populate counter -->
                <item
                    android:id="@+id/nav_user_wishlist"
                    android:icon="@drawable/ic_drawer_wish_list"
                    android:title="@string/drawer_menu_user_wishlist"
                    app:actionLayout="@layout/menu_counter" /> <!-- Needed to populate counter -->

                <item
                    android:id="@+id/nav_user_favourite"
                    android:icon="@drawable/ic_drawer_favourite"
                    android:title="@string/drawer_menu_user_favourite"
                    app:actionLayout="@layout/menu_counter" /> <!-- Needed to populate counter -->

                <item
                    android:id="@+id/nav_user_collection"
                    android:icon="@drawable/ic_drawer_user_collection"
                    android:title="@string/drawer_menu_user_collection"
                    app:actionLayout="@layout/menu_counter" /> <!-- Needed to populate counter -->
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_tmdb_user_menu_items"
        android:title="@string/drawer_menu_tmdb_header"
        android:visible="false">
        <menu>
            <group
                android:id="@+id/nav_menu_group_tmdb_user"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_tmdb_user_watchlist"
                    android:icon="@drawable/ic_drawer_tmdb_watch_list"
                    android:title="@string/drawer_menu_tmdb_user_watchlist"
                    app:actionLayout="@layout/menu_counter" /> <!-- Needed to populate counter -->
                <item
                    android:id="@+id/nav_tmdb_user_favourite"
                    android:icon="@drawable/ic_drawer_favourite"
                    android:title="@string/drawer_menu_tmdb_user_favourite"
                    app:actionLayout="@layout/menu_counter" /> <!-- Needed to populate counter -->

                <item
                    android:id="@+id/nav_tmdb_user_rated"
                    android:icon="@drawable/ic_drawer_star"
                    android:title="@string/drawer_menu_tmdb_user_rated"
                    app:actionLayout="@layout/menu_counter" /> <!-- Needed to populate counter -->
            </group>
        </menu>
    </item>
    <group android:id="@+id/nav_menu_group_other"
        android:checkableBehavior="single">
            <item
                android:id="@+id/nav_menu_logout"
                android:icon="@drawable/ic_drawer_logout"
                android:title="@string/drawer_menu_logout"
                android:visible="false"/>
        <item
            android:id="@+id/nav_menu_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/drawer_menu_settings" />
        <item
            android:id="@+id/nav_menu_rate_the_app"
            android:icon="@drawable/ic_drawer_thumbs_up_down"
            android:title="@string/drawer_menu_rate_the_app"/>
        <item
            android:id="@+id/nav_menu_contact_developer"
            android:icon="@drawable/ic_drawer_email"
            android:title="@string/drawer_menu_contact_developer"/>
        <item
            android:id="@+id/nav_menu_developer_website"
            android:icon="@drawable/ic_drawer_web"
            android:title="@string/drawer_menu_developer_website"/>
        <item
            android:id="@+id/nav_menu_privacy_policy"
            android:icon="@drawable/ic_drawer_privacy"
            android:title="@string/drawer_menu_privacy_policy"/>
        <item
            android:id="@+id/nav_menu_eula"
            android:icon="@drawable/ic_drawer_eula"
            android:title="@string/drawer_menu_eula"/>
        <item
            android:id="@+id/nav_menu_donate"
            android:icon="@drawable/ic_drawer_mood"
            android:title="@string/drawer_menu_donate"/>
    </group>
</menu>
