<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="top"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_drawer_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:contentDescription="@string/nav_drawer_imageView_content_description"
        android:src="@mipmap/ic_launcher_movie_magic" />

    <TextView
        android:id="@+id/nav_drawer_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_drawer_imageView"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/nav_drawer_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_drawer_user_name"
        android:visibility="gone"/>


    <Button
        android:id="@+id/nav_drawer_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_drawer_user_name"
        android:layout_toEndOf="@id/nav_drawer_user_id"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/primary_text"
        android:textStyle="normal"
        android:text="@string/nav_drawer_log_in"/>

</RelativeLayout>
